@@ -1,20 +1,3 @@
-/*
- * Copyright (C) 2018 Velocity Contributors
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
- */
-
 package com.velocitypowered.proxy;
 
 import com.google.common.base.MoreObjects;
@@ -22,59 +5,53 @@ import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
+import com.velocitypowered.api.event.EventManager;
 import com.velocitypowered.api.event.proxy.ProxyInitializeEvent;
 import com.velocitypowered.api.event.proxy.ProxyReloadEvent;
-import com.velocitypowered.api.event.proxy.ProxyShutdownEvent;
-import com.velocitypowered.api.network.ProtocolVersion;
 import com.velocitypowered.api.plugin.PluginContainer;
 import com.velocitypowered.api.plugin.PluginManager;
 import com.velocitypowered.api.proxy.Player;
 import com.velocitypowered.api.proxy.ProxyServer;
-import com.velocitypowered.api.proxy.player.ResourcePackInfo;
 import com.velocitypowered.api.proxy.server.RegisteredServer;
 import com.velocitypowered.api.proxy.server.ServerInfo;
 import com.velocitypowered.api.util.Favicon;
 import com.velocitypowered.api.util.GameProfile;
 import com.velocitypowered.api.util.ProxyVersion;
+import com.velocitypowered.api.util.bossbar.BossBar;
+import com.velocitypowered.api.util.bossbar.BossBarColor;
+import com.velocitypowered.api.util.bossbar.BossBarOverlay;
+import com.velocitypowered.proxy.command.GlistCommand;
+import com.velocitypowered.proxy.command.ServerCommand;
+import com.velocitypowered.proxy.command.ShutdownCommand;
+import com.velocitypowered.proxy.command.VelocityCommand;
 import com.velocitypowered.proxy.command.VelocityCommandManager;
-import com.velocitypowered.proxy.command.builtin.GlistCommand;
-import com.velocitypowered.proxy.command.builtin.ServerCommand;
-import com.velocitypowered.proxy.command.builtin.ShutdownCommand;
-import com.velocitypowered.proxy.command.builtin.VelocityCommand;
+import com.velocitypowered.proxy.config.AnnotatedConfig;
 import com.velocitypowered.proxy.config.VelocityConfiguration;
 import com.velocitypowered.proxy.connection.client.ConnectedPlayer;
-import com.velocitypowered.proxy.connection.player.VelocityResourcePackInfo;
-import com.velocitypowered.proxy.connection.util.ServerListPingHandler;
 import com.velocitypowered.proxy.console.VelocityConsole;
-import com.velocitypowered.proxy.crypto.EncryptionUtils;
-import com.velocitypowered.proxy.event.VelocityEventManager;
 import com.velocitypowered.proxy.network.ConnectionManager;
+import com.velocitypowered.proxy.network.http.NettyHttpClient;
+import com.velocitypowered.proxy.plugin.VelocityEventManager;
 import com.velocitypowered.proxy.plugin.VelocityPluginManager;
-import com.velocitypowered.proxy.protocol.ProtocolUtils;
+import com.velocitypowered.proxy.protocol.packet.Chat;
 import com.velocitypowered.proxy.protocol.util.FaviconSerializer;
 import com.velocitypowered.proxy.protocol.util.GameProfileSerializer;
 import com.velocitypowered.proxy.scheduler.VelocityScheduler;
 import com.velocitypowered.proxy.server.ServerMap;
 import com.velocitypowered.proxy.util.AddressUtil;
-import com.velocitypowered.proxy.util.ClosestLocaleMatcher;
-import com.velocitypowered.proxy.util.FileSystemUtils;
+import com.velocitypowered.proxy.util.EncryptionUtils;
 import com.velocitypowered.proxy.util.VelocityChannelRegistrar;
-import com.velocitypowered.proxy.util.bossbar.AdventureBossBarManager;
+import com.velocitypowered.proxy.util.bossbar.VelocityBossBar;
 import com.velocitypowered.proxy.util.ratelimit.Ratelimiter;
 import com.velocitypowered.proxy.util.ratelimit.Ratelimiters;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import io.netty.bootstrap.Bootstrap;
-import io.netty.channel.Channel;
-import io.netty.channel.ChannelInitializer;
 import io.netty.channel.EventLoopGroup;
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.InetSocketAddress;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.security.AccessController;
+import java.nio.file.Paths;
 import java.security.KeyPair;
-import java.security.PrivilegedAction;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Locale;
@@ -91,50 +68,34 @@ import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.IntFunction;
 import java.util.stream.Collectors;
-import net.kyori.adventure.audience.Audience;
-import net.kyori.adventure.audience.ForwardingAudience;
-import net.kyori.adventure.key.Key;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.translation.GlobalTranslator;
-import net.kyori.adventure.translation.TranslationRegistry;
+import net.kyori.text.Component;
+import net.kyori.text.TextComponent;
+import net.kyori.text.serializer.gson.GsonComponentSerializer;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.asynchttpclient.AsyncHttpClient;
 import org.checkerframework.checker.nullness.qual.EnsuresNonNull;
 import org.checkerframework.checker.nullness.qual.MonotonicNonNull;
 import org.checkerframework.checker.nullness.qual.NonNull;
-import org.checkerframework.checker.nullness.qual.Nullable;
+import org.checkerframework.checker.nullness.qual.RequiresNonNull;
 
-public class VelocityServer implements ProxyServer, ForwardingAudience {
+public class VelocityServer implements ProxyServer {
 
   private static final Logger logger = LogManager.getLogger(VelocityServer.class);
-  public static final Gson GENERAL_GSON = new GsonBuilder()
-      .registerTypeHierarchyAdapter(Favicon.class, FaviconSerializer.INSTANCE)
-      .registerTypeHierarchyAdapter(GameProfile.class, GameProfileSerializer.INSTANCE)
-      .create();
-  private static final Gson PRE_1_16_PING_SERIALIZER = ProtocolUtils
-      .getJsonChatSerializer(ProtocolVersion.MINECRAFT_1_15_2)
-      .serializer()
-      .newBuilder()
-      .registerTypeHierarchyAdapter(Favicon.class, FaviconSerializer.INSTANCE)
-      .create();
-  private static final Gson POST_1_16_PING_SERIALIZER = ProtocolUtils
-      .getJsonChatSerializer(ProtocolVersion.MINECRAFT_1_16)
-      .serializer()
-      .newBuilder()
-      .registerTypeHierarchyAdapter(Favicon.class, FaviconSerializer.INSTANCE)
+  public static final Gson GSON = GsonComponentSerializer.populate(new GsonBuilder())
+      .registerTypeHierarchyAdapter(Favicon.class, new FaviconSerializer())
+      .registerTypeHierarchyAdapter(GameProfile.class, new GameProfileSerializer())
       .create();
 
   private final ConnectionManager cm;
   private final ProxyOptions options;
   private @MonotonicNonNull VelocityConfiguration configuration;
+  private @MonotonicNonNull NettyHttpClient httpClient;
   private @MonotonicNonNull KeyPair serverKeyPair;
   private final ServerMap servers;
-  private final VelocityCommandManager commandManager;
+  private final VelocityCommandManager commandManager = new VelocityCommandManager();
   private final AtomicBoolean shutdownInProgress = new AtomicBoolean(false);
   private boolean shutdown = false;
   private final VelocityPluginManager pluginManager;
-  private final AdventureBossBarManager bossBarManager;
 
   private final Map<UUID, ConnectedPlayer> connectionsByUuid = new ConcurrentHashMap<>();
   private final Map<String, ConnectedPlayer> connectionsByName = new ConcurrentHashMap<>();
@@ -143,28 +104,24 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
   private final VelocityEventManager eventManager;
   private final VelocityScheduler scheduler;
   private final VelocityChannelRegistrar channelRegistrar = new VelocityChannelRegistrar();
-  private ServerListPingHandler serverListPingHandler;
 
   VelocityServer(final ProxyOptions options) {
     pluginManager = new VelocityPluginManager(this);
     eventManager = new VelocityEventManager(pluginManager);
-    commandManager = new VelocityCommandManager(eventManager);
     scheduler = new VelocityScheduler(pluginManager);
     console = new VelocityConsole(this);
     cm = new ConnectionManager(this);
     servers = new ServerMap(this);
-    serverListPingHandler = new ServerListPingHandler(this);
     this.options = options;
-    this.bossBarManager = new AdventureBossBarManager();
   }
 
   public KeyPair getServerKeyPair() {
-    return serverKeyPair;
+    return ensureInitialized(serverKeyPair);
   }
 
   @Override
   public VelocityConfiguration getConfiguration() {
-    return this.configuration;
+    return ensureInitialized(this.configuration);
   }
 
   @Override
@@ -187,6 +144,15 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
   }
 
   @Override
+  public @NonNull BossBar createBossBar(
+      @NonNull Component title,
+      @NonNull BossBarColor color,
+      @NonNull BossBarOverlay overlay,
+      float progress) {
+    return new VelocityBossBar(title, color, overlay, progress);
+  }
+
+  @Override
   public VelocityCommandManager getCommandManager() {
     return commandManager;
   }
@@ -201,26 +167,41 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
     logger.info("Booting up {} {}...", getVersion().getName(), getVersion().getVersion());
     console.setupStreams();
 
-    registerTranslations();
-
     serverKeyPair = EncryptionUtils.createRsaKeyPair(1024);
 
     cm.logChannelInformation();
 
     // Initialize commands first
-    commandManager.register("velocity", new VelocityCommand(this));
-    commandManager.register("server", new ServerCommand(this));
-    commandManager.register("shutdown", ShutdownCommand.command(this),
-        "end", "stop");
-    new GlistCommand(this).register();
+    commandManager.register(new VelocityCommand(this), "velocity");
+    commandManager.register(new ServerCommand(this), "server");
+    commandManager.register(new ShutdownCommand(this), "shutdown", "end");
+    commandManager.register(new GlistCommand(this), "glist");
 
-    this.doStartupConfigLoad();
+    try {
+      Path configPath = Paths.get("velocity.toml");
+      configuration = VelocityConfiguration.read(configPath);
+
+      // Resave config to add new values
+      AnnotatedConfig.saveConfig(configuration.dumpConfig(), configPath);
+
+      if (!configuration.validate()) {
+        logger.error("Your configuration is invalid. Velocity will not start up until the errors "
+            + "are resolved.");
+        LogManager.shutdown();
+        System.exit(1);
+      }
+    } catch (Exception e) {
+      logger.error("Unable to read/load/save your velocity.toml. The server will shut down.", e);
+      LogManager.shutdown();
+      System.exit(1);
+    }
 
     for (Map.Entry<String, String> entry : configuration.getServers().entrySet()) {
       servers.register(new ServerInfo(entry.getKey(), AddressUtil.parseAddress(entry.getValue())));
     }
 
     ipAttemptLimiter = Ratelimiters.createWithMilliseconds(configuration.getLoginRatelimit());
+    httpClient = new NettyHttpClient(this);
     loadPlugins();
 
     // Go ahead and fire the proxy initialization event. We block since plugins should have a chance
@@ -245,91 +226,12 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
     Metrics.VelocityMetrics.startMetrics(this, configuration.getMetrics());
   }
 
-  private void registerTranslations() {
-    final TranslationRegistry translationRegistry = TranslationRegistry
-        .create(Key.key("velocity", "translations"));
-    translationRegistry.defaultLocale(Locale.US);
-    try {
-      FileSystemUtils.visitResources(VelocityServer.class, path -> {
-        logger.info("Loading localizations...");
-
-        final Path langPath = Path.of("lang");
-
-        try {
-          if (!Files.exists(langPath)) {
-            Files.createDirectory(langPath);
-            Files.walk(path).forEach(file -> {
-              if (!Files.isRegularFile(file)) {
-                return;
-              }
-              try {
-                Path langFile = langPath.resolve(file.getFileName().toString());
-                if (!Files.exists(langFile)) {
-                  try (InputStream is = Files.newInputStream(file)) {
-                    Files.copy(is, langFile);
-                  }
-                }
-              } catch (IOException e) {
-                logger.error("Encountered an I/O error whilst loading translations", e);
-              }
-            });
-          }
-
-
-          Files.walk(langPath).forEach(file -> {
-            if (!Files.isRegularFile(file)) {
-              return;
-            }
-
-            String filename = com.google.common.io.Files
-                .getNameWithoutExtension(file.getFileName().toString());
-            String localeName = filename.replace("messages_", "")
-                .replace("messages", "")
-                .replace('_', '-');
-            Locale locale = localeName.isBlank()
-                ? Locale.US
-                : Locale.forLanguageTag(localeName);
-
-            translationRegistry.registerAll(locale, file, false);
-            ClosestLocaleMatcher.INSTANCE.registerKnown(locale);
-          });
-        } catch (IOException e) {
-          logger.error("Encountered an I/O error whilst loading translations", e);
-        }
-      }, "com", "velocitypowered", "proxy", "l10n");
-    } catch (IOException e) {
-      logger.error("Encountered an I/O error whilst loading translations", e);
-      return;
-    }
-    GlobalTranslator.translator().addSource(translationRegistry);
-  }
-
-  @SuppressFBWarnings("DM_EXIT")
-  private void doStartupConfigLoad() {
-    try {
-      Path configPath = Path.of("velocity.toml");
-      configuration = VelocityConfiguration.read(configPath);
-
-      if (!configuration.validate()) {
-        logger.error("Your configuration is invalid. Velocity will not start up until the errors "
-            + "are resolved.");
-        LogManager.shutdown();
-        System.exit(1);
-      }
-
-      commandManager.setAnnounceProxyCommands(configuration.isAnnounceProxyCommands());
-    } catch (Exception e) {
-      logger.error("Unable to read/load/save your velocity.toml. The server will shut down.", e);
-      LogManager.shutdown();
-      System.exit(1);
-    }
-  }
-
+  @RequiresNonNull({"pluginManager", "eventManager"})
   private void loadPlugins() {
     logger.info("Loading plugins...");
 
     try {
-      Path pluginPath = Path.of("plugins");
+      Path pluginPath = Paths.get("plugins");
 
       if (!pluginPath.toFile().exists()) {
         Files.createDirectory(pluginPath);
@@ -351,7 +253,7 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
       Optional<?> instance = plugin.getInstance();
       if (instance.isPresent()) {
         try {
-          eventManager.registerInternally(plugin, instance.get());
+          eventManager.register(instance.get(), instance.get());
         } catch (Exception e) {
           logger.error("Unable to register plugin listener for {}",
               plugin.getDescription().getName().orElse(plugin.getDescription().getId()), e);
@@ -362,16 +264,16 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
     logger.info("Loaded {} plugins", pluginManager.getPlugins().size());
   }
 
-  public Bootstrap createBootstrap(@Nullable EventLoopGroup group) {
+  public EventLoopGroup getWorkerGroup() {
+    return this.cm.getWorkerGroup();
+  }
+
+  public Bootstrap initializeGenericBootstrap() {
+    return this.cm.createWorker();
+  }
+
+  public Bootstrap initializeGenericBootstrap(EventLoopGroup group) {
     return this.cm.createWorker(group);
-  }
-
-  public ChannelInitializer<Channel> getBackendChannelInitializer() {
-    return this.cm.backendChannelInitializer.get();
-  }
-
-  public ServerListPingHandler getServerListPingHandler() {
-    return serverListPingHandler;
   }
 
   public boolean isShutdown() {
@@ -385,7 +287,7 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
    * @throws IOException if we can't read {@code velocity.toml}
    */
   public boolean reloadConfiguration() throws IOException {
-    Path configPath = Path.of("velocity.toml");
+    Path configPath = Paths.get("velocity.toml");
     VelocityConfiguration newConfiguration = VelocityConfiguration.read(configPath);
 
     if (!newConfiguration.validate()) {
@@ -423,14 +325,14 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
           player.createConnectionRequest(next.get()).connectWithIndication()
               .whenComplete((success, ex) -> {
                 if (ex != null || success == null || !success) {
-                  player.disconnect(Component.text("Your server has been changed, but we could "
+                  player.disconnect(TextComponent.of("Your server has been changed, but we could "
                       + "not move you to any fallback servers."));
                 }
                 latch.countDown();
               });
         } else {
           latch.countDown();
-          player.disconnect(Component.text("Your server has been changed, but we could "
+          player.disconnect(TextComponent.of("Your server has been changed, but we could "
               + "not move you to any fallback servers."));
         }
       }
@@ -459,7 +361,6 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
           newConfiguration.getQueryPort());
     }
 
-    commandManager.setAnnounceProxyCommands(newConfiguration.isAnnounceProxyCommands());
     ipAttemptLimiter = Ratelimiters.createWithMilliseconds(newConfiguration.getLoginRatelimit());
     this.configuration = newConfiguration;
     eventManager.fireAndForget(new ProxyReloadEvent());
@@ -467,12 +368,11 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
   }
 
   /**
-   * Shuts down the proxy, kicking players with the specified {@param reason}.
+   * Shuts down the proxy.
    *
    * @param explicitExit whether the user explicitly shut down the proxy
-   * @param reason message to kick online players with
    */
-  public void shutdown(boolean explicitExit, Component reason) {
+  public void shutdown(boolean explicitExit) {
     if (eventManager == null || pluginManager == null || cm == null || scheduler == null) {
       throw new AssertionError();
     }
@@ -490,7 +390,7 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
 
       ImmutableList<ConnectedPlayer> players = ImmutableList.copyOf(connectionsByUuid.values());
       for (ConnectedPlayer player : players) {
-        player.disconnect(reason);
+        player.disconnect(TextComponent.of("Proxy shutting down."));
       }
 
       try {
@@ -505,14 +405,11 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
                   .toArray((IntFunction<CompletableFuture<Void>[]>) CompletableFuture[]::new));
 
           playersTeardownFuture.get(10, TimeUnit.SECONDS);
-        } catch (TimeoutException e) {
+        } catch (TimeoutException | ExecutionException e) {
           timedOut = true;
-        } catch (ExecutionException e) {
-          timedOut = true;
-          logger.error("Exception while tearing down player connections", e);
         }
 
-        eventManager.fire(new ProxyShutdownEvent()).join();
+        eventManager.fireShutdownEvent();
 
         timedOut = !eventManager.shutdown() || timedOut;
         timedOut = !scheduler.shutdown() || timedOut;
@@ -525,56 +422,30 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
         Thread.currentThread().interrupt();
       }
 
-      // Since we manually removed the shutdown hook, we need to handle the shutdown ourselves.
-      LogManager.shutdown();
-
       shutdown = true;
 
       if (explicitExit) {
-        AccessController.doPrivileged(new PrivilegedAction<Void>() {
-          @Override
-          @SuppressFBWarnings("DM_EXIT")
-          public Void run() {
-            System.exit(0);
-            return null;
-          }
-        });
+        System.exit(0);
       }
     };
 
-    if (explicitExit) {
-      Thread thread = new Thread(shutdownProcess);
-      thread.start();
-    } else {
-      shutdownProcess.run();
-    }
+    Thread thread = new Thread(shutdownProcess);
+    thread.start();
   }
 
-  /**
-   * Calls {@link #shutdown(boolean, Component)} with the default reason "Proxy shutting down."
-   *
-   * @param explicitExit whether the user explicitly shut down the proxy
-   */
-  public void shutdown(boolean explicitExit) {
-    shutdown(explicitExit, Component.translatable("velocity.kick.shutdown"));
-  }
-
-  @Override
-  public void shutdown(Component reason) {
-    shutdown(true, reason);
-  }
-
-  @Override
-  public void shutdown() {
-    shutdown(true);
-  }
-
-  public AsyncHttpClient getAsyncHttpClient() {
-    return cm.getHttpClient();
+  public NettyHttpClient getHttpClient() {
+    return ensureInitialized(httpClient);
   }
 
   public Ratelimiter getIpAttemptLimiter() {
-    return ipAttemptLimiter;
+    return ensureInitialized(ipAttemptLimiter);
+  }
+
+  private static <T> T ensureInitialized(T o) {
+    if (o == null) {
+      throw new IllegalStateException("The proxy isn't fully initialized.");
+    }
+    return o;
   }
 
   /**
@@ -583,9 +454,6 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
    * @return {@code true} if we can register the connection, {@code false} if not
    */
   public boolean canRegisterConnection(ConnectedPlayer connection) {
-    if (configuration.isOnlineMode() && configuration.isOnlineModeKickExistingPlayers()) {
-      return true;
-    }
     String lowerName = connection.getUsername().toLowerCase(Locale.US);
     return !(connectionsByName.containsKey(lowerName)
         || connectionsByUuid.containsKey(connection.getUniqueId()));
@@ -598,37 +466,19 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
    */
   public boolean registerConnection(ConnectedPlayer connection) {
     String lowerName = connection.getUsername().toLowerCase(Locale.US);
-
-    if (!this.configuration.isOnlineModeKickExistingPlayers()) {
-      if (connectionsByName.putIfAbsent(lowerName, connection) != null) {
-        return false;
-      }
-      if (connectionsByUuid.putIfAbsent(connection.getUniqueId(), connection) != null) {
-        connectionsByName.remove(lowerName, connection);
-        return false;
-      }
-    } else {
-      ConnectedPlayer existing = connectionsByUuid.get(connection.getUniqueId());
-      if (existing != null) {
-        existing.disconnect(Component.translatable("multiplayer.disconnect.duplicate_login"));
-      }
-
-      // We can now replace the entries as needed.
-      connectionsByName.put(lowerName, connection);
-      connectionsByUuid.put(connection.getUniqueId(), connection);
+    if (connectionsByName.putIfAbsent(lowerName, connection) != null) {
+      return false;
+    }
+    if (connectionsByUuid.putIfAbsent(connection.getUniqueId(), connection) != null) {
+      connectionsByName.remove(lowerName, connection);
+      return false;
     }
     return true;
   }
 
-  /**
-   * Unregisters the given player from the proxy.
-   *
-   * @param connection the connection to unregister
-   */
   public void unregisterConnection(ConnectedPlayer connection) {
     connectionsByName.remove(connection.getUsername().toLowerCase(Locale.US), connection);
     connectionsByUuid.remove(connection.getUniqueId(), connection);
-    bossBarManager.onDisconnect(connection);
   }
 
   @Override
@@ -641,6 +491,15 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
   public Optional<Player> getPlayer(UUID uuid) {
     Preconditions.checkNotNull(uuid, "uuid");
     return Optional.ofNullable(connectionsByUuid.get(uuid));
+  }
+
+  @Override
+  public void broadcast(Component component) {
+    Preconditions.checkNotNull(component, "component");
+    Chat chat = Chat.createClientbound(component);
+    for (ConnectedPlayer player : connectionsByUuid.values()) {
+      player.getMinecraftConnection().write(chat);
+    }
   }
 
   @Override
@@ -682,11 +541,6 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
   }
 
   @Override
-  public RegisteredServer createRawRegisteredServer(ServerInfo server) {
-    return servers.createRawRegisteredServer(server);
-  }
-
-  @Override
   public RegisteredServer registerServer(ServerInfo server) {
     return servers.register(server);
   }
@@ -707,7 +561,7 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
   }
 
   @Override
-  public VelocityEventManager getEventManager() {
+  public EventManager getEventManager() {
     return eventManager;
   }
 
@@ -728,27 +582,5 @@ public class VelocityServer implements ProxyServer, ForwardingAudience {
           "No configuration"); // even though you'll never get the chance... heh, heh
     }
     return configuration.getBind();
-  }
-
-  @Override
-  public @NonNull Iterable<? extends Audience> audiences() {
-    Collection<Audience> audiences = new ArrayList<>(this.getPlayerCount() + 1);
-    audiences.add(this.console);
-    audiences.addAll(this.getAllPlayers());
-    return audiences;
-  }
-
-  public AdventureBossBarManager getBossBarManager() {
-    return bossBarManager;
-  }
-
-  public static Gson getPingGsonInstance(ProtocolVersion version) {
-    return version.compareTo(ProtocolVersion.MINECRAFT_1_16) >= 0 ? POST_1_16_PING_SERIALIZER
-        : PRE_1_16_PING_SERIALIZER;
-  }
-
-  @Override
-  public ResourcePackInfo.Builder createResourcePackBuilder(String url) {
-    return new VelocityResourcePackInfo.BuilderImpl(url);
   }
 }
